# Marketplace_prototype

./: .gitignore  README.md  package-lock.json  package.json
docs/architecture/: ai-ml.md  backend.md  data-platform.md  frontend.md  infrastructure.md  integrations.md  security-trust.md
docs/product/: growth-engagement.md
docs/tooling/: local-orchestration.md
frontend/temu-hash-app/: .env.example  next.config.mjs  package.json  tailwind.config.ts  tsconfig.json
frontend/temu-hash-app/app/: globals.css  layout.tsx  page.tsx
frontend/temu-hash-app/app/admin/: page.tsx
frontend/temu-hash-app/app/browse/: page.tsx
frontend/temu-hash-app/app/cart/: page.tsx
frontend/temu-hash-app/app/collections/: page.tsx
frontend/temu-hash-app/app/dashboard/: page.tsx
frontend/temu-hash-app/app/signin/: page.tsx
frontend/temu-hash-app/lib/: mock-data.ts
frontend/temu-hash-app/types/: next-auth.d.ts
scripts/: start_local.py
services/catalog-service/: .env.example  pyproject.toml
services/catalog-service/app/: main.py
services/catalog-service/app/routers/: assets.py  health.py
services/catalog-service/temuhash_catalog_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/gateway/api-gateway/: .env.example  pyproject.toml
services/shared/proto/: temuhash_assets.proto
services/user-service/: .env.example  pyproject.toml
services/user-service/app/: main.py
services/user-service/app/routers/: health.py  profiles.py
services/user-service/temuhash_user_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+32 files in other folders)
